--- a/io-Dorobek/packages.config
+++ b/io-Dorobek/packages.config
@@ -49,4 +49,5 @@
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net48" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.0.0" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.Windows.Interactivity.WPF" version="2.0.20525" targetFramework="net48" />
 </packages>
