Fixed some minor bugs; reorganized structure of the project
split viewmodel;
rename views;
implement publication editing;
removed some unused code;
initially implemented FileContentParser (only with metadata);
Fixed issue where file program tried to save file with illegal characters in name - ended with exception;
removed Checked property from PublicationListItem - not needed due to removal of SelectionChanged command -> now selected items are passed as command parameter destinated instructions directly.

--- a/io-Dorobek/io-Dorobek.csproj
+++ b/io-Dorobek/io-Dorobek.csproj
@@ -218,13 +218,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ViewModel\AddPublicationViewModel.cs" />
+    <Compile Include="ViewModel\EditPublicationViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
     <Compile Include="ViewModel\RelayCommand.cs" />
-    <Compile Include="View\Window1.xaml.cs">
-      <DependentUpon>Window1.xaml</DependentUpon>
+    <Compile Include="View\AddPublicationView.xaml.cs">
+      <DependentUpon>AddPublicationView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Window2.xaml.cs">
-      <DependentUpon>Window2.xaml</DependentUpon>
+    <Compile Include="View\EditPublicationView.xaml.cs">
+      <DependentUpon>EditPublicationView.xaml</DependentUpon>
     </Compile>
     <Page Include="View\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -245,11 +247,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="View\Window1.xaml">
+    <Page Include="View\AddPublicationView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\Window2.xaml">
+    <Page Include="View\EditPublicationView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
